--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@ body {
 }
 
 .container {
-  margin-left: 7%;
-  margin-right: 7%;
+  margin-left: 101px;
+  margin-right: 104px;
   padding-left: 10px;
   padding-right: 10px;
 }
 
 header {
-  height: 167px;
+  height: 178.8px;
   border: 1px solid black;
   background-image: url(bg.png);
 }
@@ -40,7 +40,7 @@ ul {
   width: 57px;
   height: 56px;
   float: left;
-  border: 1px solid black;
+  
 }
 
 .inr {
@@ -49,16 +49,19 @@ ul {
 }
 
 li.menu {
-  border: 1px solid black;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  margin-right: 11px;
+
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  margin-right: 15px;
+  box-sizing: border-box;
 }
 span.fnt-menu {
   font-size: 1.42em;
-  font-weight: bold;
-  font-style: italic;
-  padding-left: 19px;
+    font-weight: bold;
+    font-style: italic;
+    padding-left: 8px;
+    float: left;
+    margin-top: 6px;
 
 }
 
@@ -66,7 +69,7 @@ span.fnt-menu {
   padding-left:13px;
   padding-right: 13px;
   paddind-top : 7px;
-  padding-bottom: 5px;
+  padding-bottom: 1px;
   font-size: 18px;
 }
 
@@ -82,10 +85,25 @@ span.fnt-menu {
 }
 
 .nav {
-    border: 1px solid black;
-    margin-top: 7px;
+
+    margin-top: 23px;
 }
 
 .active {
   background-color: white;
+}
+
+.sml-txt {
+  font-size: 12px;
+  float: left;
+  padding-left: 8px;
+}
+
+.inactive {
+  background-color: #446;
+}
+
+.mrg {
+  padding-top: 5px;
+  font-size: 30px;
 }
