--- a/style.css
+++ b/style.css
@@ -112,19 +112,24 @@ span.fnt-menu {
 .md {
   border: 1px solid black;
   width: 265px;
-  height: 307.19px;
+  height: 307px;
 }
 
 .img_prod {
-  margin-left: auto;
+  margin-left: 32px;
   margin-right: auto;
+  padding-top: 29px;
+
 }
 
 .contenu_prod {
-  margin-left: auto;
-  margin-right: auto;
+  /*margin-left: auto;
+  margin-right: auto;*/
 }
 
+.flex {
+  display: flex;
+}
 @media (min-width: 1200px)
 .container {
     width: 1160px;
